--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 
       }
 
-      html,
+      html{
+	  
+	  border-bottom-color:#FFFF00; border-top: 4px solid #FFFC33;border-right: 19px solid #FFFC33;}
       body {
-       background-image:url(wallpaper.jpg); background-repeat:no-repeat; background-position:top; background-color:#000000; f
+       background-image:url(wallpaper.jpg); background-repeat:no-repeat; height:90%;  background-color:#000000; 
   
-  resize: both;
+
   
       }
       .tiles {
@@ -71,7 +73,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: 100%;
 		color:#FFFFFF;
       }
     .Estilo1 {color: #FFFFFF}
@@ -119,14 +121,14 @@
       src="https://unpkg.com/esp-web-tools@8.0.6/dist/web/install-button.js?module"
     ></script>
 
-
+<br>
     <div class="esp32__webusb-container">
       <div class="esp32__webusb"><div class="Estilo1">Installer for ESP32-S2</div><br>
         <div class="Estilo1">★ PS4 SERVER XPLOIT ★</div><br>
         
 		<div class="Estilo1">WIFI: PS4_XPLOIT</div>
 		<div class="Estilo1">PASS: 12345678</div><br>
-    <img src="usb.svg">
+    <img src="usb.svg"><br>
         <esp-web-install-button
           manifest="webusb.manifest.json"
         ></esp-web-install-button>
