--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" /><!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi SiSTR0 . And everyone who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>★ PS4 SERVER Installer for ESP32-S2 ★</title>
@@ -78,7 +78,19 @@
       }
     .Estilo1 {color: #FFFFFF}
 	
-    </style>
+    a:link {
+	color: #FFFFFF;
+}
+a:visited {
+	color: #FFFFFF;
+}
+a:hover {
+	color: #FFFFFF;
+}
+a:active {
+	color: #FFFFFF;
+}
+</style>
   </head>
   <body>
     <div class="tiles">
@@ -134,5 +146,7 @@
         ></esp-web-install-button>
       </div>
     </div>
+    <p align="center" class="Estilo1">Massive Thanks - Theflow0, SiSTRo, Znullptr, ChendoChap, Leeful, Sleirsgoevy,Specter, Al-Azif And Many More...<a style="text-decoration:none;" href="https://twitter.com/mour0ne" target="_blank">Website-Host by Mouuu</a></p>
+    
   </body>
 </html>
