--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ a:active {
 <br>
     <div class="esp32__webusb-container">
       <div class="esp32__webusb"><div class="Estilo1">Installer for ESP32-S2</div><br>
-        <div class="Estilo1">★ PS4 SERVER XPLOIT ★</div><br>
+        <div class="Estilo1">★ PS4 SERVER XPLOIT ★ v2</div><br>
         
 		<div class="Estilo1">WIFI: PS4_XPLOIT</div>
 		<div class="Estilo1">PASS: 12345678</div><br>
