--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 	  border-bottom-color:#FFFF00; border-top: 4px solid #FFFC33;border-right: 19px solid #FFFC33;}
       body {
        background-image:url(wallpaper.jpg); background-repeat:no-repeat; height:90%;  background-color:#000000; 
-  
+  background-size: 100% 100%;
+			background-repeat: no-repeat;
+			margin: 0px;
+			overflow: hidden;
+			
 
   
       }
@@ -56,7 +60,7 @@
         background-color: black;
 		border-bottom-color:#FFFF00;
 		border-style:solid; border-left-color:#FFFF00;border-right-color:#FFFF00;border-top-color:#FFFF00;border-radius: 16px;
-        padding: 64px;
+        padding: 24px;
         display: table-cell; 
         
         text-align: center;
@@ -145,8 +149,8 @@ a:active {
           manifest="webusb.manifest.json"
         ></esp-web-install-button>
       </div>
-    </div>
-    <p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">ESP32-S2 Host v1</a> </p>
+    </div><p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">ESP32-S2 Host v1</a> </p>
     <p align="center" class="Estilo1">Massive Thanks - Theflow0, SiSTRo, Znullptr, ChendoChap, Leeful, Sleirsgoevy,Specter, Al-Azif And Many More...<a style="text-decoration:none;" href="https://twitter.com/mour0ne" target="_blank">Website-Host by Mouuu</a></p>
+    
   </body>
 </html>
