--- a/v1/index.html
+++ b/v1/index.html
@@ -26,7 +26,11 @@
 	  
 	  border-bottom-color:#FFFF00; border-top: 4px solid #FFFC33;border-right: 19px solid #FFFC33;}
       body {
-       background-image:url(wallpaper.jpg); background-repeat:no-repeat; height:90%;  background-color:#000000; 
+        background-image:url(wallpaper.jpg); background-repeat:no-repeat; height:90%;  background-color:#000000; 
+  background-size: 100% 100%;
+			background-repeat: no-repeat;
+			margin: 0px;
+			overflow: hidden;
   
 
   
@@ -56,7 +60,7 @@
         background-color: black;
 		border-bottom-color:#FFFF00;
 		border-style:solid; border-left-color:#FFFF00;border-right-color:#FFFF00;border-top-color:#FFFF00;border-radius: 16px;
-        padding: 64px;
+        padding: 24px;
         display: table-cell; 
         
         text-align: center;
