--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@ a:active {
 <br>
     <div class="esp32__webusb-container">
       <div class="esp32__webusb"><div class="Estilo1">Installer for ESP32-S2</div><br>
-        <div class="Estilo1">★ PS4 SERVER XPLOIT ★ v2</div><br>
+        <div class="Estilo1">★ PS4 SERVER XPLOIT ★ v3</div>
+        <br>
         
 		<div class="Estilo1">WIFI: PS4_XPLOIT</div>
 		<div class="Estilo1">PASS: 12345678</div><br>
@@ -149,7 +150,7 @@ a:active {
           manifest="webusb.manifest.json"
         ></esp-web-install-button>
       </div>
-    </div><p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">ESP32-S2 Host v1</a> </p>
+    </div><p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">ESP32-S2 Host v1</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v2/">ESP32-S2 Host v2</a>
     <p align="center" class="Estilo1">Massive Thanks - Theflow0, SiSTRo, Znullptr, ChendoChap, Leeful, Sleirsgoevy,Specter, Al-Azif And Many More...<a style="text-decoration:none;" href="https://twitter.com/mour0ne" target="_blank">Website-Host by Mouuu</a></p>
     
   </body>
