--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ a:hover {
 a:active {
 	color: #FFFFFF;
 }
-</style>
+.Estilo2 {font-size: 10px}
+    </style>
   </head>
   <body>
     <div class="tiles">
@@ -148,10 +149,11 @@ a:active {
     <img src="usb.svg"><br>
         <esp-web-install-button
           manifest="webusb.manifest.json"
-        ></esp-web-install-button>
+        ></esp-web-install-button><p class="Estilo2">17/04/2023 Added GoldHEN v2.4b13</p>
       </div>
-    </div><p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">ESP32-S2 Host v1</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v2/">ESP32-S2 Host v2</a>
-    <p align="center" class="Estilo1">Massive Thanks - Theflow0, SiSTRo, Znullptr, ChendoChap, Leeful, Sleirsgoevy,Specter, Al-Azif And Many More...<a style="text-decoration:none;" href="https://twitter.com/mour0ne" target="_blank">Website-Host by Mouuu</a></p>
+    </div>   
+    <p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">ESP32-S2 Host v1</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v2/">ESP32-S2 Host v2</a>
+    <p align="center" class="Estilo1">Massive Thanks - Theflow0, SiSTRo, Znullptr, ChendoChap, Leeful, Sleirsgoevy,Specter, Stooged And Many More...<a style="text-decoration:none;" href="https://twitter.com/mour0ne" target="_blank">Website-Host by Mouuu</a></p>
     
   </body>
 </html>
