--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ a:active {
 <br>
     <div class="esp32__webusb-container">
       <div class="esp32__webusb"><div class="Estilo1">Installer for ESP32-S2</div><br>
-        <div class="Estilo1">★ PS4 SERVER XPLOIT ★ v3</div>
+        <div class="Estilo1">★ PS4 SERVER XPLOIT ★ v4</div>
         <br>
         
 		<div class="Estilo1">WIFI: PS4_XPLOIT</div>
@@ -149,7 +149,7 @@ a:active {
     <img src="usb.svg"><br>
         <esp-web-install-button
           manifest="webusb.manifest.json"
-        ></esp-web-install-button><p class="Estilo2">17/04/2023 Added GoldHEN v2.4b13</p>
+        ></esp-web-install-button><p class="Estilo2">28/04/2023 Added AUTO-JAILBREAK GoldHEN v.2.3</p>
       </div>
     </div>   
     <p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">ESP32-S2 Host v1</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v2/">ESP32-S2 Host v2</a>
