--- a/v1/index.html
+++ b/v1/index.html
@@ -149,7 +149,7 @@ a:active {
           manifest="webusb.manifest.json"
         ></esp-web-install-button>
       </div>
-    </div><a href="https://ps4xploit900.github.io/esp32s2/v2/">ESP32-S2 Host v2</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v3/">ESP32-S2 Host v3</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/">ESP32-S2 Host v4</a>
+    </div> <p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v2/">ESP32-S2 Host v2</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v3/">ESP32-S2 Host v3</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/">ESP32-S2 Host v4</a></p>
     <p align="center" class="Estilo1">Massive Thanks - Theflow0, SiSTRo, Znullptr, ChendoChap, Leeful, Sleirsgoevy,Specter, Al-Azif And Many More...<a style="text-decoration:none;" href="https://twitter.com/mour0ne" target="_blank">Website-Host by Mouuu</a></p>
     
   </body>
