--- a/v3/index.html
+++ b/v3/index.html
@@ -152,7 +152,7 @@ a:active {
         ></esp-web-install-button><p class="Estilo2">17/04/2023 Added GoldHEN v2.4b13</p>
       </div>
     </div>   
-    <p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">ESP32-S2 Host v1</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v2/">ESP32-S2 Host v2</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/">ESP32-S2 Host v4</a>
+    <p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v1/">v1</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v2/">v2</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v4/">v4</a>
     <p align="center" class="Estilo1">Massive Thanks - Theflow0, SiSTRo, Znullptr, ChendoChap, Leeful, Sleirsgoevy,Specter, Stooged And Many More...<a style="text-decoration:none;" href="https://twitter.com/mour0ne" target="_blank">Website-Host by Mouuu</a></p>
     
   </body>
