--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ a:active {
 		<div class="Estilo1">PASS: 12345678</div><br>
     <img src="usb.svg"><br>
         <esp-web-install-button
-          manifest="webusb.manifest.json" ></esp-web-install-button ><p class="Estilo2">25/05/2023 Add version selector GoldHEN AUTO</p><p class="Estilo2"><a style="text-decoration:none;" href="https://github.com/ps4xploit900/esp32s2/releases/download/ESP32-S2/v4+.10-05-23.PS4XPLOIT900-ESP32S2.bin" target="_blank">10/05/2023 Add AUTO GoldHEN v2.3+Orbis Toolbox</a></p>
+          manifest="webusb.manifest.json" ></esp-web-install-button ><p class="Estilo2">25/05/2023 Add version selector GoldHEN AUTO</p><p class="Estilo2">20/06/2023 Add GoldHEN v2.4b14</a></p>
       </div>
     </div>   
     <p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v2/">v2</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v3/">v3</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v4/">v4</a>
