--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		border-style:solid; border-left-color:#FFFF00;border-right-color:#FFFF00;border-top-color:#FFFF00;border-radius: 16px;
         padding: 24px;
         display: table-cell; 
-        
+          margin-top: 50;
         text-align: center;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         font-weight: bold;
