--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ a:active {
 		<div class="Estilo1">PASS: 12345678</div><br>
     <img src="usb.svg"><br>
         <esp-web-install-button
-          manifest="webusb.manifest.json" ></esp-web-install-button ><p class="Estilo2">09/02/2024 Add GoldHEN 2.4b16.2+Psfree</p><p class="Estilo2">25/05/2023 Add version selector GoldHEN AUTO</p><p class="Estilo2">20/06/2023 Add GoldHEN v2.4b14</a></p>
+          manifest="webusb.manifest.json" ></esp-web-install-button ><p class="Estilo2">01/01/2025 Add GoldHEN 2.4b18.2</p><<p class="Estilo2">09/02/2024 Add GoldHEN 2.4b16.2+Psfree</p><p class="Estilo2">25/05/2023 Add version selector GoldHEN AUTO</p><p class="Estilo2">20/06/2023 Add GoldHEN v2.4b14</a></p>
       </div>
     </div>   
     <p align="center" class="Estilo1"><a href="https://ps4xploit900.github.io/esp32s2/v2/">v2</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v3/">v3</a>&nbsp;&nbsp;&nbsp;<a href="https://ps4xploit900.github.io/esp32s2/v4/">v4</a>
